# src/build/swagger.json
@@ -1609,6 +1609,52 @@
 				]
 			}
 		},
+		"/api/tx/{txid}/status": {
+			"get": {
+				"operationId": "GetTxStatus",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"hash": {
+											"type": "string"
+										},
+										"idx": {
+											"type": "number",
+											"format": "double"
+										},
+										"height": {
+											"type": "number",
+											"format": "double"
+										}
+									},
+									"required": [
+										"hash",
+										"idx",
+										"height"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "txid",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/api/stats": {
 			"get": {
 				"operationId": "GetOpenListings",
